--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Trip Planner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,5 +39,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      // Function to fetch the SVG and inject it into the DOM
+      fetch('%PUBLIC_URL%/symbol-defs.svg')
+        .then(response => response.text())
+        .then(data => {
+          // Create a new <svg> element and inject the content
+          const svgContainer = document.createElement('div');
+          svgContainer.innerHTML = data;
+          document.body.insertBefore(svgContainer, document.getElementById('root'));
+        })
+        .catch(err => console.error('Error loading symbol-defs.svg:', err));
+    </script>
   </body>
 </html>
